# pqvm

./: AGENTS.md  Cargo.toml  README.md
crates/pqvm/: Cargo.toml
crates/pqvm-gas/: Cargo.toml
crates/pqvm-gas/src/: lib.rs
crates/pqvm-interpreter/: Cargo.toml
crates/pqvm-interpreter/src/: lib.rs
crates/pqvm-precompiles/: Cargo.toml
crates/pqvm-precompiles/src/: lib.rs
crates/pqvm-primitives/: Cargo.toml
crates/pqvm-primitives/src/: lib.rs
crates/pqvm-state/: Cargo.toml
crates/pqvm-state/src/: lib.rs
crates/pqvm/src/: lib.rs
crates/pqvm/tests/: conformance_vectors.rs
docs/: PQVM-1.md  SHELL_CHAIN_ADAPTER.md
tests/fixtures/: opcode_vectors.json  pqaddress_vectors.txt  pqtx_vectors.txt
