[package]
name = "pqvm-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
blake3.workspace = true
pqvm-gas.workspace = true
pqvm-precompiles.workspace = true
pqvm-primitives.workspace = true
pqvm-state.workspace = true
thiserror.workspace = true

[dev-dependencies]
pqcrypto-dilithium.workspace = true
pqcrypto-traits.workspace = true
pqvm-state = { path = "../pqvm-state" }
