[package]
name = "pqvm-precompiles"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
blake3.workspace = true
pqcrypto-dilithium.workspace = true
pqcrypto-sphincsplus.workspace = true
pqcrypto-traits.workspace = true
pqvm-gas.workspace = true
pqvm-primitives.workspace = true
thiserror.workspace = true
