[package]
name = "pqvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pqvm-gas.workspace = true
pqvm-interpreter.workspace = true
pqvm-precompiles.workspace = true
pqvm-primitives.workspace = true
pqvm-state.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
hex.workspace = true
