[package]
name = "pqvm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
blake3.workspace = true
pqvm-gas.workspace = true
pqvm-interpreter.workspace = true
pqvm-precompiles.workspace = true
pqvm-primitives.workspace = true
pqvm-state.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex.workspace = true
pqcrypto-dilithium.workspace = true
pqcrypto-traits.workspace = true
